kubernetes/pipeline/api.istio.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: earthworks-api
    app: earthworks-api
  name: earthworks-api
  namespace: earthworks
spec:
  replicas: 2
  selector:
    matchLabels:
      run: earthworks-api
      app: earthworks-api
  strategy: {}
  revisionHistoryLimit: 3
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: earthworks-api
        app: earthworks-api
        version: v1
    spec:
      containers:
      - name: earthworks-api
        image: stephenhillier/earthworks-api:IMAGE_VERSION
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources: {}
        volumeMounts:
        - name: cloudsql-instance-credentials
          mountPath: /secrets/cloudsql
          readOnly: true
      volumes:
      - name: cloudsql-instance-credentials
        secret:
          secretName: cloudsql-instance-credentials
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: earthworks-api
  name: earthworks-api
  namespace: earthworks
spec:
  ports:
  - port: 8000
    name: http
  selector:
    app: earthworks-api
status:
  loadBalancer: {}
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: earthworks-api-gateway
  namespace: earthworks
  labels:
    app: earthworks-api
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - earthworks.islandcivil.com
    tls:
      httpsRedirect: true
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: earthworks-api
  namespace: earthworks
  labels:
    app: earthworks-api
spec:
  hosts:
  - earthworks.islandcivil.com
  gateways:
  - earthworks-api-gateway
  http:
  - match:
    - uri:
        prefix: "/api/v1"
    route:
    - destination:
        host: earthworks-api
        port:
          number: 8000
